# agenix

./: CLAUDE_CODE_STYLE.md  FINAL_STYLE_GUIDE.md  README.md  pyproject.toml
agenix/: __init__.py  cli.py
agenix/bus/: __init__.py  bus.py  events.py
agenix/channel/: __init__.py  base.py  manager.py  telegram.py  tui.py  whatsapp.py
agenix/core/: agent.py  compaction.py  llm.py  messages.py  session.py  settings.py
agenix/extensions/: __init__.py  loader.py  runner.py  types.py
agenix/extensions/builtin/: __init__.py
agenix/extensions/builtin/channel/: __init__.py
agenix/extensions/builtin/cron/: __init__.py  service.py
agenix/extensions/builtin/heartbeat/: __init__.py  service.py
agenix/extensions/builtin/memory/: __init__.py  service.py
agenix/extensions/builtin/plan_mode/: __init__.py
agenix/extensions/builtin/safety/: __init__.py
agenix/extensions/builtin/skill/: __init__.py  tool.py
agenix/extensions/builtin/subagent/: __init__.py  tool.py
agenix/extensions/builtin/task/: __init__.py  task.py
agenix/tools/: __init__.py
agenix/tools/builtin/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
agenix/ui/: cli.py
docs/: ARCHITECTURE_REFACTORING.md  CHANNELS.md  CLEANUP_SUMMARY.md  COMPACTION.md  COMPACTION_PHILOSOPHY.md  EXTENSION_IMPLEMENTATION_COMPLETE.md  EXTENSION_QUICK_REFERENCE.md  EXTENSION_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  LIFECYCLE_REFACTORING_COMPLETE.md  MEMORY_CRON_HEARTBEAT.md  PROMPTS_PRESERVATION.md  PROMPT_PROTECTION_FINAL.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_STATUS.md
examples/: demo_extensions.py  multi_channel.py
tests/: test_extensions.py  verify_cleanup.py
tests/channel/: __init__.py  test_cli_basic.py
tests/core/: test_compaction.py  test_memory_cron_heartbeat.py
tests/extensions/: test_builtin_extensions.py  test_lifecycle_events.py
