[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenix"
version = "0.0.2"
description = "A lightweight AI coding agent with file operations and shell execution capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ZHANG Zhi", email = "tczhangzhi@gmail.com"}
]
keywords = ["ai", "agent", "coding", "llm", "openai", "anthropic", "claude", "automation", "cli", "assistant", "gpt-4", "agenix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.0",
    "litellm>=1.0.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.0",  # More accurate token counting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tczhangzhi/agenix"
Documentation = "https://agenix.readthedocs.io/"
Repository = "https://github.com/tczhangzhi/agenix"
"Bug Tracker" = "https://github.com/tczhangzhi/agenix/issues"
Changelog = "https://github.com/tczhangzhi/agenix/blob/main/CHANGELOG.md"

[project.scripts]
agenix = "agenix.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agenix*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
agenix = ["default-skills/**/*"]
